Fix missing logo on Mobile scroll

--- a/src/assets/scss/modules/_navigation.scss
+++ b/src/assets/scss/modules/_navigation.scss
@@ -146,16 +146,16 @@
   .is-stuck.sticky-top-bar {
     
     .title-bar-title {
-      margin-top: 2.25rem;
+      //margin-top: 2.25rem;
     }
     
     .menu-icon {
-      margin-top: 4.25rem;
+      //margin-top: 4.25rem;
     }
     
     .svg-container {
       
-      display: none;
+      //display: none;
       
       &.small-version {
         display: inline-block;
